@@ -1,45 +1,43 @@
 package com.major.project.crypto.config;
 
-import jakarta.annotation.PreDestroy;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Component;
-
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+
+import jakarta.annotation.PreDestroy;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
 @Slf4j
 @Component
 public class ShutdownCleanup {
 
-    private final String decryptedVideo;
-
-    private final String encryptedVideo;
-
-    public ShutdownCleanup(@Value("${video.decrypted-video}") String decryptedVideo,
-                           @Value("${video.output-encrypted}") String encryptedVideo) {
-        this.decryptedVideo = decryptedVideo;
-        this.encryptedVideo = encryptedVideo;
-    }
     @PreDestroy
     public void cleanup() {
-        LOGGER.info("Deleting decrypted and encrypted video");
-        deleteFile(decryptedVideo);
-        deleteFile(encryptedVideo);
+        LOGGER.info("Deleting encrypted file");
+        cleanupUploadedVideos();
     }
 
-    private void deleteFile(String filePath) {
-        try {
-            Path path = Path.of(filePath);
+    private void cleanupUploadedVideos() {
+        Path uploadDir = Paths.get(System.getProperty("user.dir"), "uploaded-videos");
 
-            if (Files.exists(path)) {
-                Files.delete(path);
-                LOGGER.info("Deleted file: {}", filePath);
-            } else {
-                LOGGER.info("File not found: {}", filePath);
-            }
-        } catch (Exception e) {
-            LOGGER.error("Failed to delete file: {}", filePath, e);
+        if (!Files.exists(uploadDir)) {
+            LOGGER.info("Upload directory does not exist: {}", uploadDir);
+            return;
+        }
+
+        try (var paths = Files.list(uploadDir)) {
+            paths.forEach(path -> {
+                try {
+                    Files.deleteIfExists(path);
+                    LOGGER.info("Deleted: {}", path.getFileName());
+                } catch (IOException e) {
+                    LOGGER.error("Failed to delete {}", path, e);
+                }
+            });
+        } catch (IOException e) {
+            LOGGER.error("Failed to clean upload directory", e);
         }
     }
 }
